--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            background-color: #ff4d4f;
+            background-color: green;
             color: white;
             padding: 2px 8px;
             border-radius: 5px;
@@ -54,7 +54,7 @@
 
         .price .original {
             text-decoration: line-through;
-            color: #888;
+            color: #990c0c;
             margin-right: 5px;
         }
 
