--- a/style.css
+++ b/style.css
@@ -45,19 +45,20 @@
 .nav-link {
   color: black;
 }
-.icon {
+.text-white {
   font-size: 20px;
+  color: #000;
 }
 /* End Navbar*/
 /* End Navbar*/
 
 /* End Navbar*/
-.product-grid {
+/*.product-grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
   width: 100%;
-}
+}*/
 .product-card {
   position: relative;
   border: 1px solid #eee;
@@ -209,18 +210,36 @@
   .form-control {
     display: none !important;
   }
-  .product-grid {
+  /*.product-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 10px 5px;
     gap: 10px;
     width: 100%;
-  }
+  }*/
 }
 /*mobile*/
 /*tablet*/
 @media (max-width: 768px) {
- 
+ .navbar img {
+    align-items: center;
+  }
+  .form-control {
+    display: none !important;
+  }
+   /*.product-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 10px 5px;
+    gap: 10px;
+    width: 100%;
+  }*/
+  /*footer */
+ /* .footer .row > div {
+  min-height: 250px; 
+  } */
+ /*footer */
+
 }
 
 /*tablet*/
@@ -228,4 +247,10 @@
 
 /*desktop*/
 
+@media (min-width: 1200px) {
+  .col-xl-5th {
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+}
 /*responsive*/
